# TetrisGL

./: CMakeLists.txt  README.md
tetris/: light_shader.frag  light_shader.vert  main.c  mesh.h  model.h  shader.c  shader.h  text.c  text.frag  text.h
